@@ -1,3 +1,8 @@
+ChmSee 1.x.x 2011-xx-xx
+-----------------------
+* Update Vietnamese po
+* Fix a bug cause of opening an unextracted chm with subpage failure
+
 ChmSee 1.3.0 2011-01-16
 -----------------------
 * Use XDG Base Directory Specification for config and bookshelf cache
